Add internationalization support with language detection and dynamic loading of language files

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -1,31 +1,33 @@
 {
-  "page_title": "مهمة المياه",
-  "game_title": "مهمة المياه",
-  "game_instructions": "اجمع 20 عنصراً لإكمال اللعبة!",
-  "start_button": "ابدأ اللعبة",
-  "reset_button": "إعادة تشغيل اللعبة",
-  "dark_mode": "الوضع المظلم",
-  "light_mode": "الوضع المضيء",
-  "cans_collected": "الخزانات المجمعة",
+  "page_title": "مهمة الماء",
+  "skip_to_content": "تخطي إلى المحتوى الرئيسي",
+  "game_title": "مهمة الماء",
+  "game_instructions": "اجمع 20 عنصرًا لإكمال اللعبة!",
+  "cans_collected": "العلب المجمعة",
   "time_left": "الوقت المتبقي",
-  "final_score": "النتيجة النهائية",
+  "dark_mode": "الوضع الليلي",
   "win_title": "لقد فزت!",
   "lose_title": "انتهت اللعبة",
+  "final_score": "النتيجة النهائية",
+  "reset_button": "إعادة اللعبة",
+  "polluted_title": "عفوًا!",
+  "polluted_message": "تلك العلبة كانت ملوثة!",
+  "ok_button": "موافق",
+  "polluted_warning": "عفوًا! هذه ليست مياه آمنة.",
   "bonus_title": "مكافأة!",
-  "bonus_message": "+15 ثانية مضافة!",
-  "polluted_title": "عذراً!",
-  "polluted_message": "هذا الخزان كان ملوثاً!",
-  "polluted_warning": "عذراً! هذه مياه غير آمنة.",
-  "ok_button": "حسناً",
+  "bonus_message": "+15 ثانية أضيفت!",
   "language_selector": "اللغة",
+  "start_game": "ابدأ اللعبة",
+  "main_title": "مهمة الماء",
+  "main_logo_alt": "شعار charity: water",
   "win_messages": [
-    "رائع! لقد جلبت مياهاً نظيفة للقرية! 💧",
-    "لقد نجحت! كل خزان مهم. 🌟",
-    "النصر! مياه نظيفة للجميع! 🎉"
+    "رائع! لقد جلبت ماءً نظيفًا لقرية! 💧",
+    "لقد فعلتها! كل علبة مهمة. 🌟",
+    "النصر! ماء نظيف للجميع! 🎉"
   ],
   "lose_messages": [
-    "استمر في المحاولة! كل خزان يساعد. 💪",
-    "تقريباً وصلت! حاول مرة أخرى من أجل المياه النظيفة. 🚰",
+    "استمر بالمحاولة! كل علبة تساعد. 💪",
+    "اقتربت! حاول مرة أخرى للحصول على ماء نظيف. 🚰",
     "لا تستسلم! الماء هو الحياة. 🌍"
   ]
 }
