--- a/languages/en.json
+++ b/languages/en.json
@@ -1,23 +1,25 @@
 {
   "page_title": "Water Quest",
+  "skip_to_content": "Skip to main content",
   "game_title": "Water Quest",
   "game_instructions": "Collect 20 items to complete the game!",
-  "start_button": "Start Game",
-  "reset_button": "Reset Game",
-  "dark_mode": "Dark Mode",
-  "light_mode": "Light Mode",
   "cans_collected": "Cans Collected",
   "time_left": "Time Left",
-  "final_score": "Final Score",
+  "dark_mode": "Dark Mode",
   "win_title": "You Win!",
   "lose_title": "Game Over",
-  "bonus_title": "Bonus!",
-  "bonus_message": "+15 seconds added!",
+  "final_score": "Final Score",
+  "reset_button": "Reset Game",
   "polluted_title": "Whoops!",
   "polluted_message": "That can was polluted!",
-  "polluted_warning": "Oops! That's not safe water.",
   "ok_button": "OK",
+  "polluted_warning": "Oops! That's not safe water.",
+  "bonus_title": "Bonus!",
+  "bonus_message": "+15 seconds added!",
   "language_selector": "Language",
+  "start_game": "Start Game",
+  "main_title": "Water Quest",
+  "main_logo_alt": "charity: water logo",
   "win_messages": [
     "Amazing! You brought clean water to a village! 💧",
     "You did it! Every can counts. 🌟",
