--- a/languages/fr.json
+++ b/languages/fr.json
@@ -1,31 +1,29 @@
 {
-  "page_title": "Mission Eau",
-  "game_title": "Mission Eau",
-  "game_instructions": "Collectez 20 éléments pour terminer le jeu !",
-  "start_button": "Commencer le Jeu",
-  "reset_button": "Redémarrer le Jeu",
-  "dark_mode": "Mode Sombre",
-  "light_mode": "Mode Clair",
-  "cans_collected": "Bidons Collectés",
-  "time_left": "Temps Restant",
-  "final_score": "Score Final",
-  "win_title": "Vous Avez Gagné !",
-  "lose_title": "Jeu Terminé",
-  "bonus_title": "Bonus !",
-  "bonus_message": "+15 secondes ajoutées !",
+  "page_title": "Water Quest",
+  "skip_to_content": "Aller au contenu principal",
+  "game_title": "Water Quest",
+  "game_instructions": "Collectez 20 objets pour terminer le jeu !",
+  "cans_collected": "Bidons collectés",
+  "time_left": "Temps restant",
+  "dark_mode": "Mode sombre",
+  "win_title": "Vous avez gagné !",
+  "lose_title": "Partie terminée",
+  "final_score": "Score final",
+  "reset_button": "Recommencer",
   "polluted_title": "Oups !",
   "polluted_message": "Ce bidon était pollué !",
-  "polluted_warning": "Oups ! Ce n'est pas de l'eau potable.",
   "ok_button": "OK",
+  "polluted_warning": "Oups ! Ce n'est pas de l'eau potable.",
+  "bonus_title": "Bonus !",
+  "bonus_message": "+15 secondes ajoutées !",
   "language_selector": "Langue",
-  "win_messages": [
-    "Incroyable ! Vous avez apporté de l'eau propre à un village ! 💧",
-    "Vous l'avez fait ! Chaque bidon compte. 🌟",
-    "Victoire ! De l'eau propre pour tous ! 🎉"
-  ],
-  "lose_messages": [
-    "Continuez à essayer ! Chaque bidon aide. 💪",
-    "Presque réussi ! Essayez encore pour l'eau propre. 🚰",
-    "N'abandonnez pas ! L'eau c'est la vie. 🌍"
-  ]
+  "start_game": "Démarrer le jeu",
+  "main_title": "Water Quest",
+  "main_logo_alt": "logo charity: water",
+  "Amazing! You brought clean water to a village! 💧": "Incroyable ! Vous avez apporté de l'eau propre à un village ! 💧",
+  "You did it! Every can counts. 🌟": "Bravo ! Chaque bidon compte. 🌟",
+  "Victory! Clean water for all! 🎉": "Victoire ! De l'eau propre pour tous ! 🎉",
+  "Keep trying! Every can helps. 💪": "Continuez d'essayer ! Chaque bidon aide. 💪",
+  "Almost there! Try again for clean water. 🚰": "Presque ! Essayez encore pour de l'eau propre. 🚰",
+  "Don't give up! Water is life. 🌍": "N'abandonnez pas ! L'eau, c'est la vie. 🌍"
 }
