--- a/languages/he.json
+++ b/languages/he.json
@@ -1,31 +1,29 @@
 {
   "page_title": "משימת המים",
+  "skip_to_content": "דלג לתוכן הראשי",
   "game_title": "משימת המים",
-  "game_instructions": "אספו 20 פריטים כדי להשלים את המשחק!",
-  "start_button": "התחל משחק",
-  "reset_button": "אפס משחק",
-  "dark_mode": "מצב כהה",
-  "light_mode": "מצב בהיר",
-  "cans_collected": "פחים שנאספו",
+  "game_instructions": "אסוף 20 פריטים כדי להשלים את המשחק!",
+  "cans_collected": "פחיות שנאספו",
   "time_left": "זמן שנותר",
-  "final_score": "ניקוד סופי",
+  "dark_mode": "מצב כהה",
   "win_title": "ניצחת!",
-  "lose_title": "המשחק הסתיים",
+  "lose_title": "המשחק נגמר",
+  "final_score": "תוצאה סופית",
+  "reset_button": "התחל מחדש",
+  "polluted_title": "אופס!",
+  "polluted_message": "הפחית הזו הייתה מזוהמת!",
+  "ok_button": "אישור",
+  "polluted_warning": "אופס! זה לא מים בטוחים.",
   "bonus_title": "בונוס!",
   "bonus_message": "+15 שניות נוספו!",
-  "polluted_title": "אופס!",
-  "polluted_message": "הפח הזה היה מזוהם!",
-  "polluted_warning": "אופס! אלו לא מים בטוחים.",
-  "ok_button": "אישור",
   "language_selector": "שפה",
-  "win_messages": [
-    "מדהים! הבאת מים נקיים לכפר! 💧",
-    "עשית את זה! כל פח חשוב. 🌟",
-    "ניצחון! מים נקיים לכולם! 🎉"
-  ],
-  "lose_messages": [
-    "המשך לנסות! כל פח עוזר. 💪",
-    "כמעט הגעת! נסה שוב למען מים נקיים. 🚰",
-    "אל תוותר! מים זה חיים. 🌍"
-  ]
+  "start_game": "התחל משחק",
+  "main_title": "משימת המים",
+  "main_logo_alt": "לוגו charity: water",
+  "Amazing! You brought clean water to a village! 💧": "מדהים! הבאת מים נקיים לכפר! 💧",
+  "You did it! Every can counts. 🌟": "עשית את זה! כל פחית נחשבת. 🌟",
+  "Victory! Clean water for all! 🎉": "ניצחון! מים נקיים לכולם! 🎉",
+  "Keep trying! Every can helps. 💪": "המשך לנסות! כל פחית עוזרת. 💪",
+  "Almost there! Try again for clean water. 🚰": "כמעט שם! נסה שוב למים נקיים. 🚰",
+  "Don't give up! Water is life. 🌍": "אל תוותר! מים הם חיים. 🌍"
 }
