--- a/languages/hi.json
+++ b/languages/hi.json
@@ -1,31 +1,29 @@
 {
-  "page_title": "जल मिशन",
-  "game_title": "जल मिशन",
-  "game_instructions": "खेल पूरा करने के लिए 20 वस्तुएं इकट्ठा करें!",
-  "start_button": "खेल शुरू करें",
-  "reset_button": "खेल रीसेट करें",
-  "dark_mode": "डार्क मोड",
-  "light_mode": "लाइट मोड",
-  "cans_collected": "बर्तन इकट्ठे किए गए",
+  "page_title": "वाटर क्वेस्ट",
+  "skip_to_content": "मुख्य सामग्री पर जाएं",
+  "game_title": "वाटर क्वेस्ट",
+  "game_instructions": "खेल पूरा करने के लिए 20 आइटम इकट्ठा करें!",
+  "cans_collected": "इकट्ठे किए गए कैन",
   "time_left": "समय शेष",
-  "final_score": "अंतिम स्कोर",
+  "dark_mode": "डार्क मोड",
   "win_title": "आप जीत गए!",
   "lose_title": "खेल समाप्त",
+  "final_score": "अंतिम स्कोर",
+  "reset_button": "खेल रीसेट करें",
+  "polluted_title": "अरे!",
+  "polluted_message": "वह कैन प्रदूषित था!",
+  "ok_button": "ठीक है",
+  "polluted_warning": "अरे! वह सुरक्षित पानी नहीं है।",
   "bonus_title": "बोनस!",
   "bonus_message": "+15 सेकंड जोड़े गए!",
-  "polluted_title": "अरे नहीं!",
-  "polluted_message": "यह बर्तन दूषित था!",
-  "polluted_warning": "अरे नहीं! यह सुरक्षित पानी नहीं है।",
-  "ok_button": "ठीक है",
   "language_selector": "भाषा",
-  "win_messages": [
-    "बहुत बढ़िया! आपने गांव में साफ पानी पहुंचाया! 💧",
-    "आपने कर दिया! हर बर्तन मायने रखता है। 🌟",
-    "जीत! सभी के लिए साफ पानी! 🎉"
-  ],
-  "lose_messages": [
-    "कोशिश करते रहें! हर बर्तन मदद करता है। 💪",
-    "लगभग हो गया! साफ पानी के लिए फिर कोशिश करें। 🚰",
-    "हार न मानें! पानी ही जीवन है। 🌍"
-  ]
+  "start_game": "खेल शुरू करें",
+  "main_title": "वाटर क्वेस्ट",
+  "main_logo_alt": "charity: water लोगो",
+  "Amazing! You brought clean water to a village! 💧": "शानदार! आपने गाँव में स्वच्छ पानी पहुँचाया! 💧",
+  "You did it! Every can counts. 🌟": "आपने कर दिखाया! हर कैन मायने रखता है। 🌟",
+  "Victory! Clean water for all! 🎉": "विजय! सभी के लिए स्वच्छ पानी! 🎉",
+  "Keep trying! Every can helps. 💪": "कोशिश करते रहें! हर कैन मदद करता है। 💪",
+  "Almost there! Try again for clean water. 🚰": "लगभग पहुँच गए! स्वच्छ पानी के लिए फिर कोशिश करें। 🚰",
+  "Don't give up! Water is life. 🌍": "हार मत मानो! पानी ही जीवन है। 🌍"
 }
