--- a/languages/ja.json
+++ b/languages/ja.json
@@ -1,31 +1,29 @@
 {
   "page_title": "ウォータークエスト",
+  "skip_to_content": "メインコンテンツへスキップ",
   "game_title": "ウォータークエスト",
-  "game_instructions": "ゲームをクリアするために20個のアイテムを集めよう！",
-  "start_button": "ゲーム開始",
-  "reset_button": "ゲームリセット",
-  "dark_mode": "ダークモード",
-  "light_mode": "ライトモード",
-  "cans_collected": "缶の収集数",
+  "game_instructions": "20個集めてゲームをクリアしよう！",
+  "cans_collected": "集めた缶",
   "time_left": "残り時間",
-  "final_score": "最終スコア",
+  "dark_mode": "ダークモード",
   "win_title": "勝利！",
   "lose_title": "ゲームオーバー",
-  "bonus_title": "ボーナス！",
-  "bonus_message": "+15秒追加されました！",
-  "polluted_title": "しまった！",
+  "final_score": "最終スコア",
+  "reset_button": "ゲームをリセット",
+  "polluted_title": "おっと！",
   "polluted_message": "その缶は汚染されていました！",
-  "polluted_warning": "しまった！それは安全な水ではありません。",
   "ok_button": "OK",
+  "polluted_warning": "おっと！それは安全な水ではありません。",
+  "bonus_title": "ボーナス！",
+  "bonus_message": "+15秒追加！",
   "language_selector": "言語",
-  "win_messages": [
-    "素晴らしい！村にきれいな水をもたらしました！💧",
-    "やりました！すべての缶が大切です。🌟",
-    "勝利！みんなにきれいな水を！🎉"
-  ],
-  "lose_messages": [
-    "頑張り続けて！すべての缶が役に立ちます。💪",
-    "もう少しでした！きれいな水のためにもう一度挑戦しましょう。🚰",
-    "諦めないで！水は命です。🌍"
-  ]
+  "start_game": "ゲーム開始",
+  "main_title": "ウォータークエスト",
+  "main_logo_alt": "charity: water ロゴ",
+  "Amazing! You brought clean water to a village! 💧": "素晴らしい！村にきれいな水を届けました！💧",
+  "You did it! Every can counts. 🌟": "やったね！すべての缶が大切です。🌟",
+  "Victory! Clean water for all! 🎉": "勝利！みんなにきれいな水を！🎉",
+  "Keep trying! Every can helps. 💪": "頑張って！すべての缶が役立ちます。💪",
+  "Almost there! Try again for clean water. 🚰": "もう少し！きれいな水のためにもう一度挑戦しよう。🚰",
+  "Don't give up! Water is life. 🌍": "あきらめないで！水は命です。🌍"
 }
