--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,31 +1,33 @@
 {
-  "page_title": "Водная Миссия",
-  "game_title": "Водная Миссия",
+  "page_title": "Водный Квест",
+  "skip_to_content": "Перейти к основному содержанию",
+  "game_title": "Водный Квест",
   "game_instructions": "Соберите 20 предметов, чтобы завершить игру!",
-  "start_button": "Начать Игру",
-  "reset_button": "Перезапустить Игру",
-  "dark_mode": "Тёмная Тема",
-  "light_mode": "Светлая Тема",
-  "cans_collected": "Канистр Собрано",
-  "time_left": "Осталось Времени",
-  "final_score": "Итоговый Счёт",
-  "win_title": "Вы Выиграли!",
-  "lose_title": "Игра Окончена",
+  "cans_collected": "Собрано канистр",
+  "time_left": "Оставшееся время",
+  "dark_mode": "Темный режим",
+  "win_title": "Вы выиграли!",
+  "lose_title": "Игра окончена",
+  "final_score": "Итоговый счет",
+  "reset_button": "Сбросить игру",
+  "polluted_title": "Ой!",
+  "polluted_message": "Эта канистра была загрязнена!",
+  "ok_button": "ОК",
+  "polluted_warning": "Ой! Это не безопасная вода.",
   "bonus_title": "Бонус!",
   "bonus_message": "+15 секунд добавлено!",
-  "polluted_title": "Упс!",
-  "polluted_message": "Эта канистра была загрязнена!",
-  "polluted_warning": "Упс! Это небезопасная вода.",
-  "ok_button": "ОК",
   "language_selector": "Язык",
+  "start_game": "Начать игру",
+  "main_title": "Водный Квест",
+  "main_logo_alt": "логотип charity: water",
   "win_messages": [
     "Потрясающе! Вы принесли чистую воду в деревню! 💧",
-    "У вас получилось! Каждая канистра важна. 🌟",
+    "Вы сделали это! Каждая канистра важна. 🌟",
     "Победа! Чистая вода для всех! 🎉"
   ],
   "lose_messages": [
-    "Продолжайте попытки! Каждая канистра помогает. 💪",
-    "Почти удалось! Попробуйте ещё раз ради чистой воды. 🚰",
-    "Не сдавайтесь! Вода - это жизнь. 🌍"
+    "Продолжайте пытаться! Каждая канистра помогает. 💪",
+    "Почти получилось! Попробуйте еще раз ради чистой воды. 🚰",
+    "Не сдавайтесь! Вода — это жизнь. 🌍"
   ]
 }
