--- a/languages/zh.json
+++ b/languages/zh.json
@@ -1,31 +1,29 @@
 {
-  "page_title": "水之任务",
-  "game_title": "水之任务",
-  "game_instructions": "收集20个物品完成游戏！",
-  "start_button": "开始游戏",
-  "reset_button": "重新开始",
-  "dark_mode": "深色模式",
-  "light_mode": "浅色模式",
-  "cans_collected": "已收集水桶",
+  "page_title": "水之探险",
+  "skip_to_content": "跳到主要内容",
+  "game_title": "水之探险",
+  "game_instructions": "收集20个物品以完成游戏！",
+  "cans_collected": "收集的水罐",
   "time_left": "剩余时间",
-  "final_score": "最终得分",
+  "dark_mode": "夜间模式",
   "win_title": "你赢了！",
   "lose_title": "游戏结束",
-  "bonus_title": "奖励！",
-  "bonus_message": "+15秒奖励时间！",
-  "polluted_title": "糟糕！",
-  "polluted_message": "这个水桶被污染了！",
-  "polluted_warning": "糟糕！这不是安全饮用水。",
+  "final_score": "最终得分",
+  "reset_button": "重新开始",
+  "polluted_title": "哎呀！",
+  "polluted_message": "那个水罐被污染了！",
   "ok_button": "确定",
+  "polluted_warning": "哎呀！那不是安全的水。",
+  "bonus_title": "奖励！",
+  "bonus_message": "+15秒已添加！",
   "language_selector": "语言",
-  "win_messages": [
-    "太棒了！你为村庄带来了清洁水源！💧",
-    "你做到了！每一滴水都很重要。🌟",
-    "胜利！为所有人提供清洁水源！🎉"
-  ],
-  "lose_messages": [
-    "继续努力！每个水桶都有帮助。💪",
-    "快成功了！再次为清洁水源努力。🚰",
-    "不要放弃！水就是生命。🌍"
-  ]
+  "start_game": "开始游戏",
+  "main_title": "水之探险",
+  "main_logo_alt": "charity: water 标志",
+  "Amazing! You brought clean water to a village! 💧": "太棒了！你为村庄带来了干净的水！💧",
+  "You did it! Every can counts. 🌟": "你做到了！每个水罐都很重要。🌟",
+  "Victory! Clean water for all! 🎉": "胜利！为所有人带来干净的水！🎉",
+  "Keep trying! Every can helps. 💪": "继续努力！每个水罐都有帮助。💪",
+  "Almost there! Try again for clean water. 🚰": "快成功了！再试一次获得干净的水。🚰",
+  "Don't give up! Water is life. 🌍": "不要放弃！水就是生命。🌍"
 }
