--- a/languages/de.json
+++ b/languages/de.json
@@ -1,31 +1,29 @@
 {
-  "page_title": "Wasser Mission",
-  "game_title": "Wasser Mission",
+  "page_title": "Water Quest",
+  "skip_to_content": "Zum Hauptinhalt springen",
+  "game_title": "Water Quest",
   "game_instructions": "Sammle 20 Gegenstände, um das Spiel zu beenden!",
-  "start_button": "Spiel Starten",
-  "reset_button": "Spiel Zurücksetzen",
-  "dark_mode": "Dunkler Modus",
-  "light_mode": "Heller Modus",
-  "cans_collected": "Kanister Gesammelt",
+  "cans_collected": "Gesammelte Kanister",
   "time_left": "Verbleibende Zeit",
+  "dark_mode": "Dunkler Modus",
+  "win_title": "Du hast gewonnen!",
+  "lose_title": "Spiel vorbei",
   "final_score": "Endpunktzahl",
-  "win_title": "Du Hast Gewonnen!",
-  "lose_title": "Spiel Beendet",
+  "reset_button": "Spiel zurücksetzen",
+  "polluted_title": "Hoppla!",
+  "polluted_message": "Dieser Kanister war verschmutzt!",
+  "ok_button": "OK",
+  "polluted_warning": "Hoppla! Das ist kein sicheres Wasser.",
   "bonus_title": "Bonus!",
   "bonus_message": "+15 Sekunden hinzugefügt!",
-  "polluted_title": "Ups!",
-  "polluted_message": "Dieser Kanister war verschmutzt!",
-  "polluted_warning": "Ups! Das ist kein sicheres Wasser.",
-  "ok_button": "OK",
   "language_selector": "Sprache",
-  "win_messages": [
-    "Fantastisch! Du hast sauberes Wasser in ein Dorf gebracht! 💧",
-    "Du hast es geschafft! Jeder Kanister zählt. 🌟",
-    "Sieg! Sauberes Wasser für alle! 🎉"
-  ],
-  "lose_messages": [
-    "Weiter versuchen! Jeder Kanister hilft. 💪",
-    "Fast geschafft! Versuche es nochmal für sauberes Wasser. 🚰",
-    "Gib nicht auf! Wasser ist Leben. 🌍"
-  ]
+  "start_game": "Spiel starten",
+  "main_title": "Water Quest",
+  "main_logo_alt": "charity: water Logo",
+  "Amazing! You brought clean water to a village! 💧": "Erstaunlich! Du hast sauberes Wasser in ein Dorf gebracht! 💧",
+  "You did it! Every can counts. 🌟": "Du hast es geschafft! Jeder Kanister zählt. 🌟",
+  "Victory! Clean water for all! 🎉": "Sieg! Sauberes Wasser für alle! 🎉",
+  "Keep trying! Every can helps. 💪": "Weiter so! Jeder Kanister hilft. 💪",
+  "Almost there! Try again for clean water. 🚰": "Fast geschafft! Versuche es erneut für sauberes Wasser. 🚰",
+  "Don't give up! Water is life. 🌍": "Gib nicht auf! Wasser ist Leben. 🌍"
 }
