--- a/languages/es.json
+++ b/languages/es.json
@@ -1,31 +1,29 @@
 {
-  "page_title": "Misión del Agua",
-  "game_title": "Misión del Agua",
-  "game_instructions": "¡Recolecta 20 elementos para completar el juego!",
-  "start_button": "Iniciar Juego",
-  "reset_button": "Reiniciar Juego",
-  "dark_mode": "Modo Oscuro",
-  "light_mode": "Modo Claro",
-  "cans_collected": "Bidones Recolectados",
-  "time_left": "Tiempo Restante",
-  "final_score": "Puntuación Final",
-  "win_title": "¡Has Ganado!",
-  "lose_title": "Juego Terminado",
-  "bonus_title": "¡Bonificación!",
-  "bonus_message": "¡+15 segundos añadidos!",
-  "polluted_title": "¡Ups!",
-  "polluted_message": "¡Ese bidón estaba contaminado!",
-  "polluted_warning": "¡Ups! Esa no es agua segura.",
+  "page_title": "Water Quest",
+  "skip_to_content": "Saltar al contenido principal",
+  "game_title": "Water Quest",
+  "game_instructions": "¡Recoge 20 objetos para completar el juego!",
+  "cans_collected": "Latas recogidas",
+  "time_left": "Tiempo restante",
+  "dark_mode": "Modo oscuro",
+  "win_title": "¡Has ganado!",
+  "lose_title": "Juego terminado",
+  "final_score": "Puntuación final",
+  "reset_button": "Reiniciar juego",
+  "polluted_title": "¡Vaya!",
+  "polluted_message": "¡Esa lata estaba contaminada!",
   "ok_button": "OK",
+  "polluted_warning": "¡Vaya! Esa no es agua segura.",
+  "bonus_title": "¡Bono!",
+  "bonus_message": "¡+15 segundos añadidos!",
   "language_selector": "Idioma",
-  "win_messages": [
-    "¡Increíble! ¡Trajiste agua limpia a una aldea! 💧",
-    "¡Lo lograste! Cada bidón cuenta. 🌟",
-    "¡Victoria! ¡Agua limpia para todos! 🎉"
-  ],
-  "lose_messages": [
-    "¡Sigue intentando! Cada bidón ayuda. 💪",
-    "¡Casi lo logras! Intenta de nuevo por agua limpia. 🚰",
-    "¡No te rindas! El agua es vida. 🌍"
-  ]
+  "start_game": "Comenzar juego",
+  "main_title": "Water Quest",
+  "main_logo_alt": "logo de charity: water",
+  "Amazing! You brought clean water to a village! 💧": "¡Increíble! ¡Llevaste agua limpia a una aldea! 💧",
+  "You did it! Every can counts. 🌟": "¡Lo lograste! Cada lata cuenta. 🌟",
+  "Victory! Clean water for all! 🎉": "¡Victoria! ¡Agua limpia para todos! 🎉",
+  "Keep trying! Every can helps. 💪": "¡Sigue intentando! Cada lata ayuda. 💪",
+  "Almost there! Try again for clean water. 🚰": "¡Casi lo logras! Intenta de nuevo por agua limpia. 🚰",
+  "Don't give up! Water is life. 🌍": "¡No te rindas! El agua es vida. 🌍"
 }
