Add light mode translations and update dark mode terminology in multiple language files

--- a/languages/ar.json
+++ b/languages/ar.json
@@ -5,7 +5,8 @@
   "game_instructions": "اجمع 20 عنصرًا لإكمال اللعبة!",
   "cans_collected": "العلب المجمعة",
   "time_left": "الوقت المتبقي",
-  "dark_mode": "الوضع الليلي",
+  "light_mode": "الوضع المضيء",
+  "dark_mode": "الوضع المظلم",
   "win_title": "لقد فزت!",
   "lose_title": "انتهت اللعبة",
   "final_score": "النتيجة النهائية",
