--- a/languages/de.json
+++ b/languages/de.json
@@ -25,5 +25,6 @@
   "Victory! Clean water for all! 🎉": "Sieg! Sauberes Wasser für alle! 🎉",
   "Keep trying! Every can helps. 💪": "Weiter so! Jeder Kanister hilft. 💪",
   "Almost there! Try again for clean water. 🚰": "Fast geschafft! Versuche es erneut für sauberes Wasser. 🚰",
-  "Don't give up! Water is life. 🌍": "Gib nicht auf! Wasser ist Leben. 🌍"
+  "Don't give up! Water is life. 🌍": "Gib nicht auf! Wasser ist Leben. 🌍",
+  "light_mode": "Heller Modus"
 }
