--- a/languages/en.json
+++ b/languages/en.json
@@ -6,6 +6,7 @@
   "cans_collected": "Cans Collected",
   "time_left": "Time Left",
   "dark_mode": "Dark Mode",
+  "light_mode": "Light Mode",
   "win_title": "You Win!",
   "lose_title": "Game Over",
   "final_score": "Final Score",
