--- a/languages/es.json
+++ b/languages/es.json
@@ -5,7 +5,8 @@
   "game_instructions": "¡Recoge 20 objetos para completar el juego!",
   "cans_collected": "Latas recogidas",
   "time_left": "Tiempo restante",
-  "dark_mode": "Modo oscuro",
+  "light_mode": "Modo Claro",
+  "dark_mode": "Modo Oscuro",
   "win_title": "¡Has ganado!",
   "lose_title": "Juego terminado",
   "final_score": "Puntuación final",
