--- a/languages/fr.json
+++ b/languages/fr.json
@@ -5,7 +5,8 @@
   "game_instructions": "Collectez 20 objets pour terminer le jeu !",
   "cans_collected": "Bidons collectés",
   "time_left": "Temps restant",
-  "dark_mode": "Mode sombre",
+  "light_mode": "Mode Clair",
+  "dark_mode": "Mode Sombre",
   "win_title": "Vous avez gagné !",
   "lose_title": "Partie terminée",
   "final_score": "Score final",
