--- a/languages/he.json
+++ b/languages/he.json
@@ -5,7 +5,7 @@
   "game_instructions": "אסוף 20 פריטים כדי להשלים את המשחק!",
   "cans_collected": "פחיות שנאספו",
   "time_left": "זמן שנותר",
-  "dark_mode": "מצב כהה",
+  "dark_mode": "מצב חשוך",
   "win_title": "ניצחת!",
   "lose_title": "המשחק נגמר",
   "final_score": "תוצאה סופית",
