--- a/languages/hi.json
+++ b/languages/hi.json
@@ -5,6 +5,7 @@
   "game_instructions": "खेल पूरा करने के लिए 20 आइटम इकट्ठा करें!",
   "cans_collected": "इकट्ठे किए गए कैन",
   "time_left": "समय शेष",
+  "light_mode": "प्रकाश मोड",
   "dark_mode": "डार्क मोड",
   "win_title": "आप जीत गए!",
   "lose_title": "खेल समाप्त",
