--- a/languages/ja.json
+++ b/languages/ja.json
@@ -5,6 +5,7 @@
   "game_instructions": "20個集めてゲームをクリアしよう！",
   "cans_collected": "集めた缶",
   "time_left": "残り時間",
+  "light_mode": "ライトモード",
   "dark_mode": "ダークモード",
   "win_title": "勝利！",
   "lose_title": "ゲームオーバー",
