--- a/languages/ru.json
+++ b/languages/ru.json
@@ -5,7 +5,8 @@
   "game_instructions": "Соберите 20 предметов, чтобы завершить игру!",
   "cans_collected": "Собрано канистр",
   "time_left": "Оставшееся время",
-  "dark_mode": "Темный режим",
+  "light_mode": "Светлый режим",
+  "dark_mode": "Тёмный режим",
   "win_title": "Вы выиграли!",
   "lose_title": "Игра окончена",
   "final_score": "Итоговый счет",
