--- a/languages/zh.json
+++ b/languages/zh.json
@@ -5,7 +5,7 @@
   "game_instructions": "收集20个物品以完成游戏！",
   "cans_collected": "收集的水罐",
   "time_left": "剩余时间",
-  "dark_mode": "夜间模式",
+  "dark_mode": "深色模式",
   "win_title": "你赢了！",
   "lose_title": "游戏结束",
   "final_score": "最终得分",
